[package]
name = "Artemos"
version = "0.1.0"
edition = "2024"
authors = [
    "Xingkun Fan <18646154381@163.com>",
    "Qixuan Wu <1043530132@qq.com>",
    "Yucheng Liu <cheparity@gmail.com>"
]

[dependencies]
log = "0.4.27"
spin = "0.10.0"

[target.riscv64gc-unknown-none-elf.dependencies]
riscv = "0.13.0"


[target.loongarch64-unknown-none.dependencies]
