[package]
name = "Artemos"
version = "0.1.0"
edition = "2024"
authors = [
    "Xingkun Fan <18646154381@163.com>",
    "Qixuan Wu <1043530132@qq.com>",
    "Yucheng Liu <cheparity@gmail.com>",
]

[dependencies]
log = "0.4.27"
spin = "0.10.0"


[target.'cfg(any(target_arch = "riscv64"))'.dependencies]
riscv = "0.13.0"
fdt = "0.1.5"


[target.'cfg(any(target_arch = "loongarch64"))'.dependencies]

[profile.release]
debug = true
opt-level = 0
