[package]
name = "Artemos"
version = "0.1.0"
edition = "2024"
authors = [
    "Xingkun Fan <18646154381@163.com>",
    "Qixuan Wu <1043530132@qq.com>",
    "Yucheng Liu <cheparity@gmail.com>",
]

[dependencies]
log = "0.4.27"
spin = "0.10.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.11.0"
bitflags = "2.9.1"
xmas-elf = "0.10.0"

[workspace]
members = ["user"]


[target.'cfg(any(target_arch = "riscv64"))'.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
fdt = "0.1.5"


[target.'cfg(any(target_arch = "loongarch64"))'.dependencies]

[profile.release]
debug = true
